# camera_lidar_calibration

./: CMakeLists.txt  README.md
resources/: config.json  corner_lidar.txt  corner_photo.txt  extrinsic.txt  intrinsic.txt  pc.json
src/: cam_lid_external.cpp  common.h  projectCloud.cpp
